# aegis-governance

./: .coverage  .cspell.json  .gitignore  .lychee.toml  .markdownlint-cli2.yaml  .markdownlint.json  .yamllint.yml  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE-DOCS  NOTICE  README.md  REFERENCES.md  SECURITY.md  SPECIFICATION.md  TERMINOLOGY.md  TRADEMARKS.md  draft_whitepaper.md  intro.md  overview.md  pyproject.toml
.github/: ci_add-rfc-template-check.md  copilot-instructions.md  pull_request_template.md
aegis-core/: README.md
aegis-runtime/: CHANGELOG.md  MOVED.md  README.md  pyproject.toml
aegis_governance.egg-info/: PKG-INFO  SOURCES.txt
aiam/: AEGIS_AIAM1_ATTESTATION.md  AEGIS_AIAM1_AUTHORITY.md  AEGIS_AIAM1_CAPABILITIES.md  AEGIS_AIAM1_CONFORMANCE.md  AEGIS_AIAM1_DELEGATION.md  AEGIS_AIAM1_IDENTITY.md  AEGIS_AIAM1_INDEX.md  AEGIS_AIAM1_INTENT.md  AEGIS_AIAM1_INTEROPERABILITY.md  AEGIS_AIAM1_REVOCATION.md  AEGIS_AIAM1_SESSIONS.md  AEGIS_AIAM1_THREAT_MODEL.md
changelog/: 2026-03-07-nist-submission.md  2026-03-13-repository-as-living-paper.md  INDEX.md  README.md
claude-project/: aegis-instructions-and-vision.yaml
docs/: 01_AEGIS_Marketing_Overview.md  02_AEGIS_White_Paper.md  03_AEGIS_Reference_Architecture.md  AEGIS_ANNOUNCEMENT_READINESS_ASSESSMENT.md  AEGIS_ANNOUNCEMENT_READINESS_CHECKLIST.md  PUBLICATIONS.md  README.md  RELATED_WORK.md
examples/: README.md
federation/: AEGIS_ATPROTO_GOVERNANCE_NETWORK.md  AEGIS_GFN1_GOVERNANCE_FEEDS.md  AEGIS_GFN1_GOVERNANCE_NETWORK.md  AEGIS_GFN1_SCHEMA.md  README.md  (+4 more)
(+232 files in other folders)
